books/manifest-files/book.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-app
  template:
    metadata:
      labels:
        app: book-app
    spec:
      containers:
      - name: book-app
        image: harkishore/book-image:v11
        ports:
        - containerPort: 3000
