books/manifest-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybook-service
spec:
  type: ClusterIP
  selector:
    app: book-app
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 3000
